@@ -1,6 +1,8 @@
 1.0.0.4 (x.6.2023)
 improved Make it clearer what URLs are accepted #46
 improved Conventions: count space characters #26
+fixed Format properties not saved when closing App
+added X-TIMESTAMP-MAP for WebVTT format properties
 
 1.0.0.3 (17.6.2023)
 fixed EDL from Final Cut Pro 7 don't import properly #75
